--- a/AbstraxArtStore/appsettings.json
+++ b/AbstraxArtStore/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AbstraxArtStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AbstraxArtStore;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=AbstraxArtStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
